poke/testsuite/poke.pkl/struct-method-diag-9.pk
/* { dg-do compile } */

method foo = void: /* { dg-error "method" } */
  {
  }
